extends Node2D


# Called when the node enters the scene tree for the first time.
func _ready():
	$Ingles.play()
	$Ingles2.play()
	$Ingles3.play()
	$Ingles4.play()
	$Ingles5.play()
	$Ingles7.play()
	$Ingles8.play()
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
